--- a/style.css
+++ b/style.css
@@ -39,14 +39,13 @@ https://images3.alphacoders.com/551/551161.jpg */
   background-color: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(5px);
   padding: 30px 20px;
-  margin: 20% 0;
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
   font-family: inherit;
 }
 
 .entrance-button {
   font-size: 4rem;
-  
+  margin: 20% 0;
 }
 
 .entrance-button:hover {
@@ -55,3 +54,11 @@ https://images3.alphacoders.com/551/551161.jpg */
   transition-timing-function: ease-in-out;
   cursor: pointer;
 }
+
+#character-image {
+  width: 100%;
+  max-width: 200px;
+  height: auto;
+}
+
+
