--- a/style.css
+++ b/style.css
@@ -59,6 +59,8 @@ https://images3.alphacoders.com/551/551161.jpg */
   width: 100%;
   max-width: 200px;
   height: auto;
+  border-radius: 10%;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 #list-element {
