--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ https://images3.alphacoders.com/551/551161.jpg */
   background-color: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(5px);
   padding: 30px 20px;
-  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  box-shadow: rgba(255, 255, 255, 0.199) 0px 4px 16px, rgba(255, 255, 255, 0.199) 0px 8px 24px, rgba(255, 255, 255, 0.199) 0px 16px 56px;
   font-family: inherit;
 }
 
@@ -75,17 +75,45 @@ https://images3.alphacoders.com/551/551161.jpg */
   font-size: 3.5rem;
   font-weight: bold;
   /* color: rgba(229, 230, 220, 0.89); */
+  padding-top: 2%;
 }
 
-#tag-line{
+#tag-line, #expl-para {
   background-color: rgba(255, 255, 255, 0.199);
+  width: fit-content;
+  display: inline-block;
+  padding: 0 10px;
+  border-radius: 10px;
+  box-shadow: rgba(255, 255, 255, 0.199) 0px 4px 16px, rgba(255, 255, 255, 0.199) 0px 8px 24px, rgba(255, 255, 255, 0.199) 0px 16px 56px;
 }
 
-#input-one, #input-two {
+#input-one, #input-two, #reset-button {
   font-family: inherit;
   margin: 10px;
   font-size: 1.2rem;
   border-radius: 5px;
   padding: 10px;
   background-color: rgb(226, 225, 225);
+}
+
+#blurb, #list-element {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+#blurb{
+  font-family: 'Koho', sans-serif;
+}
+#expl-para {
+  font-size: 1.2rem;
+}
+
+#input-form {
+  margin-top: 2%;
+}
+
+
+#input-two:hover {
+  opacity: 0.5;
+  cursor: pointer;
 }
