--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "middleearthmedium";
-  src: url('middleearth-ao6m-webfont.woff') format("woff2"),
+  src: url("middleearth-ao6m-webfont.woff") format("woff2"),
     url("middleearth-ao6m-webfont.woff2") format("woff");
   font-weight: normal;
   font-style: normal;
@@ -33,13 +33,16 @@ https://images3.alphacoders.com/551/551161.jpg */
   }
 }
 
-.entrance-button, #results-container {
+.entrance-button,
+#results-container {
   border: 0.5px gray solid;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(5px);
   padding: 30px 20px;
-  box-shadow: rgba(255, 255, 255, 0.199) 0px 4px 16px, rgba(255, 255, 255, 0.199) 0px 8px 24px, rgba(255, 255, 255, 0.199) 0px 16px 56px;
+  box-shadow: rgba(255, 255, 255, 0.199) 0px 4px 16px,
+    rgba(255, 255, 255, 0.199) 0px 8px 24px,
+    rgba(255, 255, 255, 0.199) 0px 16px 56px;
   font-family: inherit;
 }
 
@@ -60,15 +63,22 @@ https://images3.alphacoders.com/551/551161.jpg */
   max-width: 200px;
   height: auto;
   border-radius: 10%;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    margin-top: 20px;
 }
+
+/* #character-image:hover {
+ opacity: 0.5;
+} */
 
 #list-element {
   list-style-type: none;
 }
 
 #container {
-  margin: 100px;
+  /* margin: 100px; */
 }
 
 #title {
@@ -78,16 +88,28 @@ https://images3.alphacoders.com/551/551161.jpg */
   padding-top: 2%;
 }
 
-#tag-line, #expl-para {
+#tag-line
+ {
   background-color: rgba(255, 255, 255, 0.199);
   width: fit-content;
   display: inline-block;
   padding: 0 10px;
   border-radius: 10px;
-  box-shadow: rgba(255, 255, 255, 0.199) 0px 4px 16px, rgba(255, 255, 255, 0.199) 0px 8px 24px, rgba(255, 255, 255, 0.199) 0px 16px 56px;
+  box-shadow: rgba(255, 255, 255, 0.199) 0px 4px 16px,
+    rgba(255, 255, 255, 0.199) 0px 8px 24px,
+    rgba(255, 255, 255, 0.199) 0px 16px 56px;
+  }
+  
+  #expl-para {
+    font-family: 'Josefin Slab', serif;
+    font-size: 3em;
+    font-weight: 800;
+    
 }
 
-#input-one, #input-two, #reset-button {
+#input-one,
+#input-two,
+#reset-button {
   font-family: inherit;
   margin: 10px;
   font-size: 1.2rem;
@@ -96,14 +118,31 @@ https://images3.alphacoders.com/551/551161.jpg */
   background-color: rgb(226, 225, 225);
 }
 
-#blurb, #list-element {
-  font-weight: bold;
+#blurb,
+#list-element {
+  font-weight: 650;
   font-size: 1.5rem;
 }
 
-#blurb{
-  font-family: 'Koho', sans-serif;
+#attributes-list {
+  display: flex;
+  align-items: left;
+  justify-content: space-between;
+  margin: 20px;
 }
+
+#list-element {
+  padding: 2px;
+  font-size: 1.2rem;
+    font-family: 'Special Elite', cursive;
+    text-transform: capitalize;
+}
+
+#blurb {
+  font-family: 'Josefin Slab', serif;
+  margin: 20px;
+}
+
 #expl-para {
   font-size: 1.2rem;
 }
@@ -112,8 +151,39 @@ https://images3.alphacoders.com/551/551161.jpg */
   margin-top: 2%;
 }
 
-
 #input-two:hover {
   opacity: 0.5;
   cursor: pointer;
 }
+
+#quote {
+  font-family: 'Special Elite', cursive;
+
+  font-weight: 100;
+	font-size: 2rem;
+	/* max-width: 600px; */
+	line-height: 1.4;
+
+	margin: 0 20%;
+	padding: .5rem;
+}
+
+/* #quote:before,
+#quote:after {
+	position: absolute;
+	color: #F1EFE6;
+	font-size: 8rem;
+	width: 4rem;
+	height: 4rem;
+}
+
+#quote:before {
+	content: '"';
+	left: -5rem;
+	top: -2rem;
+}
+#quote:after {
+	content: '"';
+	right: -5rem;
+	bottom: 1rem;
+} */
