--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ body {
   text-align: center;
   /* font-family: "Cedarville Cursive", cursive; */
   font-family: "middleearthmedium", 'Josefin Slab', serif;
+  font-size: 16px;
+
 }
 
 /* https://studybreaks.com/wp-content/uploads/2018/04/The-Lord-of-the-Rings.jpg
@@ -128,7 +130,7 @@ https://images3.alphacoders.com/551/551161.jpg */
     font-family: 'Josefin Slab', serif;
     font-size: 3em;
     font-weight: 800;
-    
+    margin: 23px;
 }
 
 #input-one,
@@ -209,6 +211,7 @@ https://images3.alphacoders.com/551/551161.jpg */
   rgba(255, 255, 255, 0.199) 0px 8px 24px,
   rgba(255, 255, 255, 0.199) 0px 16px 56px;
   border:grey
+  
 }
 
 a:link {
