--- a/style2.css
+++ b/style2.css
@@ -18,7 +18,6 @@
   padding: 0;
 }
 
-
 body {
   /* background: url("https://studybreaks.com/wp-content/uploads/2018/04/The-Lord-of-the-Rings.jpg") center center cover no-repeat fixed; */
   background-image: url("https://art.ngfiles.com/images/505000/505877_spectar22_the-doors-of-moria-2.jpg?f1493086368");
@@ -32,14 +31,19 @@ body {
   /* font-family: "Cedarville Cursive", cursive; */
   font-family: "middleearthmedium", 'Josefin Slab', serif;
   font-size: 16px;
+
 }
 
 
-/* @media only screen and (max-width: 767px) {
+
+/* https://studybreaks.com/wp-content/uploads/2018/04/The-Lord-of-the-Rings.jpg
+https://images3.alphacoders.com/551/551161.jpg */
+
+@media only screen and (max-width: 767px) {
   body {
     background-image: url("https://studybreaks.com/wp-content/uploads/2018/04/The-Lord-of-the-Rings.jpg");
   }
-} */
+}
 
 
 
@@ -72,11 +76,15 @@ body {
   font-family: 'elvish', 'Josefin Slab', serif;
   font-size: 4em;
   opacity: 0.7;
+  margin-left: 9.5%;
+  color: #B0C2D7
+
+  
 }
 
 .entrance-button {
-  font-size: 4rem;
-  margin: 15% 10% 5% 10%;
+  font-size: 3rem;
+  margin: 20% 10% 5% 20%;
   width: fit-content;
 
 }
@@ -251,7 +259,9 @@ a:active {
 }
 
 #clue {
-  margin: 20px;
+  margin-top: 5%;
+  margin-left: 12.5%;
+  color: #B0C2D7
 }
 
 @media only screen 
